<resources>
    <string name="app_name">Emsys</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome here</string>
    <string name="please_wait">Please wait…</string>

    <string name="empty_password_alert">Please enter password</string>
    <string name="empty_email_alert">Please enter email</string>
    <string name="invalid_email_alert">Please enter valid email</string>


    <string name="search">Search</string>
    <string name="no_data_found">No Data Found</string>
    <string name="invoices">Invoices</string>
    <string name="list">List</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="cost">Cost</string>
    <string name="payment">Payment</string>
    <string name="balance">Balance</string>
    <string name="invoice">Invoice</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="container">Container</string>
    <string name="pending">Pending</string>
    <string name="status">Status</string>
    <string name="driver">Driver</string>
</resources>