<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_7sdp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/emsys_logo"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"/>

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Demo"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUser"/>

    <ImageView
        android:id="@+id/ivEnglish"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/flag_a"
        android:scaleType="fitXY"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHead"/>

    <ImageView
        android:id="@+id/ivFrench"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/flag"
        android:scaleType="fitXY"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHead"/>

    <View
        android:id="@+id/vwLang"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_light_gray"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/ivEnglish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvInvoice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/invoices"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_7sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwLang"
        app:drawableStartCompat="@drawable/file_invoice" />

    <ImageView
        android:id="@+id/ivInvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_keyboard_arrow_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvInvoice"
        app:layout_constraintBottom_toBottomOf="@+id/tvInvoice"/>

    <TextView
        android:id="@+id/tvInvoiceList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_7sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:textSize="14sp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInvoice" />

    <View
        android:id="@+id/vwInvoice"
        android:layout_width="0dp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_light_gray"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvInvoiceList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swDarkMode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:trackTint="@color/color_light_gray"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vwInvoice" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:drawablePadding="@dimen/_7sdp"
        android:paddingVertical="@dimen/_3sdp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDarkMode"
        app:drawableStartCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>