<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivReset"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="3dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_refresh_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_fileds_bg"
            android:elevation="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivReset">

            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="2dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/baseline_menu_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearch"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@null"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/search"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@color/colorIcons"
                android:textColorHint="@color/color_light_gray"
                android:elevation="3dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toEndOf="@+id/ivMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivSearch"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/baseline_search_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInvoiceList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_invoice_row"
            app:layout_constraintTop_toBottomOf="@+id/clSearch"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvNoDataFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data_found"
            android:textSize="20sp"
            android:textColor="@color/colorIcons"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start" >

            <include
                android:id="@+id/layoutItems"
                layout="@layout/layout_drawer_navigation" />

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>